--- a/TimeHopper/Storyboards/Base.lproj/Main.storyboard
+++ b/TimeHopper/Storyboards/Base.lproj/Main.storyboard
@@ -19,24 +19,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uaU-oO-EJv">
-                                <rect key="frame" x="16" y="40" width="288" height="117"/>
+                                <rect key="frame" x="16" y="80" width="288" height="117"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="117" id="Uvc-Gv-MdA"/>
                                 </constraints>
                                 <string key="text">Привет! Готов к путешествию? 
 Тогда давай знакомиться и не забудь пристегнуться!</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите Ваше имя:" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwP-Bf-sea">
-                                <rect key="frame" x="51" y="213" width="218" height="34"/>
+                                <rect key="frame" x="29" y="253" width="262" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EvG-0S-t2B">
-                                <rect key="frame" x="51" y="307" width="218" height="30"/>
+                                <rect key="frame" x="29" y="347" width="262" height="34"/>
                                 <color key="backgroundColor" name="AccentColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Настроить машину времени"/>
@@ -58,17 +59,17 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EvG-0S-t2B" secondAttribute="trailing" constant="51" id="CHl-DR-YLa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EvG-0S-t2B" secondAttribute="trailing" constant="29" id="CHl-DR-YLa"/>
                             <constraint firstItem="uaU-oO-EJv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Cz9-dg-aRS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uaU-oO-EJv" secondAttribute="trailing" constant="16" id="HJX-fZ-exQ"/>
                             <constraint firstItem="r30-4b-HNw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="XjJ-eT-fON"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lwP-Bf-sea" secondAttribute="trailing" constant="51" id="Xxj-H5-31Y"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lwP-Bf-sea" secondAttribute="trailing" constant="29" id="Xxj-H5-31Y"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="r30-4b-HNw" secondAttribute="bottom" constant="20" id="ZVL-eH-1ej"/>
-                            <constraint firstItem="EvG-0S-t2B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="dwD-HA-LSQ"/>
+                            <constraint firstItem="EvG-0S-t2B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="29" id="dwD-HA-LSQ"/>
                             <constraint firstItem="lwP-Bf-sea" firstAttribute="top" secondItem="uaU-oO-EJv" secondAttribute="bottom" constant="56" id="kgE-hB-5ZE"/>
-                            <constraint firstItem="uaU-oO-EJv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="nb2-ul-DRb"/>
+                            <constraint firstItem="uaU-oO-EJv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="nb2-ul-DRb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r30-4b-HNw" secondAttribute="trailing" constant="16" id="v7V-zj-Q5q"/>
-                            <constraint firstItem="lwP-Bf-sea" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="xLC-vh-5N2"/>
+                            <constraint firstItem="lwP-Bf-sea" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="29" id="xLC-vh-5N2"/>
                             <constraint firstItem="EvG-0S-t2B" firstAttribute="top" secondItem="lwP-Bf-sea" secondAttribute="bottom" constant="60" id="z8a-Zh-HLV"/>
                         </constraints>
                     </view>
